# triary

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.contexts/: _handoff.md  api-design.md  architecture.md  bootstrap-decisions.md  concept.md  data-model.md  implementation-plan.md  requirements.md  security-overrides.md  setup-plan.md  specification.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ai-review.yml  chromatic.yml  ci.yml  e2e.yml
backend/: Cargo.toml
backend/.cargo/: audit.toml
backend/migrations/: 20260407000000_init.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/domain/: mod.rs
backend/src/infrastructure/: mod.rs
backend/src/interfaces/: mod.rs
backend/src/interfaces/http/: error.rs  mod.rs
backend/src/interfaces/http/routes/: health.rs  mod.rs
backend/tests/: architecture.rs
docs/: api.md
frontend/: .dependency-cruiser.cjs  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.stories.tsx  App.test.tsx  App.tsx  index.tsx
frontend/src/api/: client.ts  query-client.ts  schema.gen.ts
frontend/src/components/: .gitkeep
frontend/src/features/: .gitkeep
frontend/src/lib/: .gitkeep
frontend/src/mocks/: browser.ts  handlers.ts  server.ts
frontend/src/routes/: home.stories.tsx  home.test.tsx  index.tsx  not-found.tsx
frontend/src/test/: setup.ts  (+1 more)
openapi/: openapi.yaml
tests/integration/: triary.postman_collection.json
