[package]
name = "triary-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "triary_backend"
path = "src/lib.rs"

[[bin]]
name = "triary-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "chrono",
    "derive",
    "json",
    "macros",
    "migrate",
    "mysql",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
fake = { version = "5", features = ["chrono", "derive", "uuid"] }
http-body-util = "0.1"
pretty_assertions = "1"
proptest = "1"
rstest = "0.26"
tower = { version = "0.5", features = ["util"] }
